add images to products in dbService, and create new prop in BrandDatabase(brandImage)